--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ARc - Atomic React</title>
+  <title>SNUwagon</title>
   <meta name="description" content="React starter kit based on Atomic Design with React Router, Webpack, Redux, Server Side Rendering and more">
   <meta property="og:site_name" content="ARc">
-  <meta property="og:image" content="https://diegohaz.github.io/arc/thumbnail.png">
+  <meta property="og:image" content="./icon.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="icon.png" />
+  <link rel="icon" href="./icon.png" />
 </head>
 <body>
 
